2nd ver with css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
 <head>
         <title>Tales about silly thoughts</title>
         <meta charset="utf-8">
+        <style>a {
+                color:cornflowerblue;
+                text-decoration: none;
+                }
+
+                h1{ 
+                text-align:center;
+                font-size:60px;;
+                border-bottom: 5px solid grey;;
+                padding : 20px;
+                margin: 0px;
+                }   
+                h2{ font-style: italic; color : silver}
+
+                ol{
+                border-right: 5px solid grey;
+                margin: 0px;
+                width: 100px;
+                padding: 20px;
+                }
+                body{margin: 0px;} 
+        </style>
 </head>
 
 <body>
@@ -19,6 +41,7 @@
 
 
  <h2>Welcome to tales about silly thoughts</h2>
+ <p><a href="box.html">but if you want to go box world....</a></p>
 
 
 </body>
