--- a/1.html
+++ b/1.html
@@ -5,19 +5,20 @@
 <head>
         <title>Tales about silly thoughts</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+ 
+      
  <h1><a href="index.html">A Short story</a></h1>
+ <div id ="grid">
  <ol>
          <li><a href="1.html">about mouth</a></li>
-         <li><a href="2.html">about time</a></li>
-         <li><a href="3.html">about fire</a></li>
- </ol>
- 
- 
-
-
+         <li><a href="2.html"style="color:red">about time</a></li>
+         <li><a href="3.html"style="color:red">about fire</a></li>
+ </ol> 
+ <div id = "story">
  <h2>about mouth</h2>
 
  
@@ -42,7 +43,8 @@
  </pre>
  
  <img src="coding.jpg" alt="whereismyponnie" width="80%">
-
+ </div>
+ </div>
 </body>
 
 </html>
