--- a/3.html
+++ b/3.html
@@ -5,19 +5,21 @@
 <head>
         <title>Tales about silly thoughts</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
  <h1><a href="index.html">A Short story</a></h1>
+ <div id = "grid">
  <ol>
-         <li><a href="1.html">about mouth</a></li>
-         <li><a href="2.html">about time</a></li>
+         <li><a href="1.html"style="color:red">about mouth</a></li>
+         <li><a href="2.html"style="color:red">about time</a></li>
          <li><a href="3.html">about fire</a></li>
  </ol>
  
  
 
-
+ <div id = "story">
  <h2>about fire</h2>
 
  
@@ -40,7 +42,8 @@
  </pre>
  
  <img src="coding.jpg" alt="whereismyponnie" width="80%">
-
+</div>
+</div>
 </body>
 
 </html>
